--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,27 @@
 
 body {
   background: radial-gradient(
-    4000px circle at 60.39% 42.44%,
-    #1b1234 0%,
-    #17023b 100%
+          4000px circle at 60.39% 42.44%,
+          #1b1234 0%,
+          #17023b 100%
   );
 }
 
 ul {
   list-style-type: none;
 }
+
 .fade-in {
   opacity: 1;
   transition: all 0.5s ease-in-out;
 }
 
+/* Обновите стиль для .app, чтобы он был видимым */
 .app {
+  opacity: 1;
+}
+
+.app:not(.leaflet-home) {
   opacity: 0;
 }
 
