--- a/src/page/Authorization/LoginForm.module.scss
+++ b/src/page/Authorization/LoginForm.module.scss
@@ -1,10 +1,9 @@
-// components/LoginForm.module.scss
-.container {
+.loginContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;  // 100% высота экрана
-  }
+  height: 100vh;
+}
 
 .formContainer {
   max-width: 400px;
