--- a/src/leaflet/LeafletComponents/leaflet-container.css
+++ b/src/leaflet/LeafletComponents/leaflet-container.css
@@ -6,3 +6,21 @@
 .leaflet-container {
     cursor: default !important;
 }
+
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.alert {
+    position: relative;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
